Update 1 - Copia (2).html

--- a/index_arquivos/FOTOPORNO/1 - Copia (2).html
+++ b/index_arquivos/FOTOPORNO/1 - Copia (2).html
@@ -35,7 +35,22 @@ img {
 </style></head><body>
 <!---------------------------------------------------------------------------------->
 <h1>Fortaleza, 10:54 26/10/2023<br/>NOSSO SITE</h1>
-<h2>BEM VINDO</h2>
+<h2>BEM VINDO</h2><P><u>De tudo um pouquinho</u></P>
+<hP>"<B><mark><b id='piscando' style="transition-duration:0.5s">
+ATENÇÃO.
+</b><script>
+var teste = 0;
+ setInterval(piscar, 500);
+ function piscar(){
+if(teste<1){
+teste++;
+document.getElementById('piscando').style.opacity = '1';
+} else{
+teste = 0; 
+document.getElementById('piscando').style.opacity = '0';
+}};
+</script></mark>"<br/><font color="red">Contém cenas de sexo, proibido para menores de 18 anos.</font></B></P>
+<hr/></font>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
@@ -49,293 +64,222 @@ img {
 <div height="100" style="background-color: #00FF00;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+4>INÍCIO</FONT></p></div></a>
 <!----------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+" width="280" height="280"></a>
+
 
 
 
