Update 1 - Copia.html

--- a/index_arquivos/INTERESSANTE/1 - Copia.html
+++ b/index_arquivos/INTERESSANTE/1 - Copia.html
@@ -50,19 +50,19 @@ img {
 <!----------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube-nocookie.com/embed/27n1F8ihsow
 ?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://i.ytimg.com/vi_webp/27n1F8ihsow/maxresdefault.webp
 " width="280" height="280"></a><BR/>
-NOME⚫
+🔴▶ 39 Histórias fascinantes por trás de fotos antigas,<BR/> Nostalgia HISTÓRIA | CenaTop
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube-nocookie.com/embed/9ozTxBDIU_o
 ?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://i.ytimg.com/vi/9ozTxBDIU_o/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
-NOME⚫
+💚 COMO ERA VIVER NO BRASIL HÁ 200 ANOS EM 1822 <BR/> BICENTENÁRIO DA IDEPENDÊNCIA
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
