Update 1 - Copia.html

--- a/index_arquivos/MÚSICAS/1 - Copia.html
+++ b/index_arquivos/MÚSICAS/1 - Copia.html
@@ -50,11 +50,10 @@ img {
 <!----------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://drive.google.com/drive/folders/1OvbLXLyJSm5vyzvAPkT-qTciKWpLGhF6?usp=sharing" target="_blank"><img src="
+Google_Drive_icon_(2020).svg.png
 " width="280" height="280"></a><BR/>
-NOME⚫
+Coletâneas do google drive (fs16).
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
