--- a/index_arquivos/index_arquivos/DOWNLOADS/1.html
+++ b/index_arquivos/index_arquivos/DOWNLOADS/1.html
@@ -151,69 +151,75 @@ MEUS LINKS
 <!----------------------------------------------------------------------------------------------------------->
 <!----------------------------------------------------------------------------------------------------------->
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
+LINK🔴
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
@@ -223,72 +229,85 @@ NOME🔴
 
 
 
-<li><a target="_blank" href="
+
+
+
+
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
-">
+.zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
+LINK🔴
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+
+
+
 
 
 
