Update 1 - Copia.html

--- a/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
+++ b/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
@@ -151,145 +151,217 @@ MEUS LINKS
 <!----------------------------------------------------------------------------------------------------------->
 <!----------------------------------------------------------------------------------------------------------->
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 https://github.com/JBMSANTOS12164/NOSSO-SITE/archive/refs/heads/main.zip
 ">
 <mark>DOWNLOAD DESSE SITE (NOSSO SITE).</mark>
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 VÍDEO HTML.zip
 ">
 VÍDEO HTML
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 VÍDEO AUTOPLAY HTML.zip
 ">
 VÍDEO AUTOPLAY HTML
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 Sombra 1
 .zip">
 Sombra 1 "html"
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 Sombra 2
 .zip">
 Sombra 2 "html"
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 Sombra 3
 .zip">
 Sombra 3 "html"
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 Botton 250 50 100
 .zip">
 Botton 250 50 100
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 Botão efeito 1
 .zip">
 Botão efeito 1
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 PAGINAÇÃO
 .zip">
 PAGINAÇÃO
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 VOLTAR AO TOPO
 .zip">
 VOLTAR AO TOPO
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 index
 .zip">
 index
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
+LINK🔴
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
+LINK🔴
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
+LINK🔴
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
+LINK🔴
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
+LINK🔴
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
+LINK🔴
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
+LINK🔴
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
+LINK🔴
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
+LINK🔴
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
+LINK🔴
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
+LINK🔴
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
+LINK🔴
+.zip">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
@@ -301,73 +373,73 @@ NOME🔴
 
 
 
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
+<li><a target="_self" href="
 LINK🔴
 .zip">
 NOME🔴
